--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "main": "todo.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "prepare": "cd .. && husky install todo-cli/.husky"
   },
   "author": "Mayank Raj <mayankrajsingh7646@gmail.com>",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "husky": "^8.0.3",
     "jest": "^29.7.0"
   }
 }
