--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "devDependencies": {
-    "husky": "^9.1.6"
+    "eslint": "^9.12.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3"
   },
   "scripts": {
     "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "prettier --write ."
+    ]
   }
 }
