--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "devDependencies": {
-    "eslint": "^9.12.0",
-    "husky": "^9.1.6",
-    "lint-staged": "^15.2.10",
-    "prettier": "^3.3.3"
+    "husky": "^9.1.6"
   },
   "scripts": {
     "prepare": "husky"
