--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -5,11 +5,20 @@
   "scripts": {
     "test": "jest"
   },
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "prettier --write ."
+    ]
+  },
   "keywords": [],
   "author": "Mayank Raj <mayankrajsingh7646@gmail.com>",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "eslint": "^9.12.0",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3"
   }
 }
