--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky"
   },
-  "lint-staged":{
+  "lint-staged": {
     "*.js": [
       "eslint",
       "prettier --write ."
@@ -17,6 +18,7 @@
   "description": "",
   "devDependencies": {
     "eslint": "^9.12.0",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3"
