--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -22,5 +22,9 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3"
+  },
+  "dependencies": {
+    "pg": "^8.13.0",
+    "sequelize": "^6.37.4"
   }
 }
