--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -3,19 +3,32 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start:prod":"node index.js",
+    "start": "nodemon -e js,ejs",
     "test": "jest",
     "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "prettier --write ."
+    ]
   },
   "keywords": [],
   "author": "Mayank Raj <mayankrajsingh7646@gmail.com>",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "eslint": "^9.12.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.10",
+    "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
     "supertest": "^7.0.0"
   },
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
