--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -29,6 +29,7 @@
     "supertest": "^7.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "pg": "^8.13.0",
